Sun Mar  6 09:20:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/INET_Addr_Test.cpp:
        * tests/Multihomed_INET_Addr_Test.cpp:
          Fixed gcc 4.5 warnings

        * tests/Log_Thread_Inheritance_Test.cpp:
        * tests/MT_Reference_Counted_Notify_Test.cpp:
        * tests/NDDS_Timer_Test.cpp:
          Zapped some empty lines

Sat Mar  5 17:31:08 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Minor layout changes.

        * ace/config-openbsd.h:
          Define MT_SAFE. Minor layout changes.

        * ace/config-macros.h:
          Do not define _REENTRANT. It should be defined in platform
          specific files if needed.

Sat Mar  5 12:14:27 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/gnuace.features:
          Set qt4 instead of qt to default 1

        * include/makeinclude/platform_g++_common.GNU:
          Also don't use strict aliasing with gcc 4.2/4.3

Sat Mar  5 07:16:12 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux.h:
          Removed some GLIBC 2.1 related settings.

Fri Mar  4 16:00:26 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
        * include/makeinclude/platform_freebsd.GNU:
          Threads related cleanup.

Fri Mar  4 14:54:49 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
          OpenBSD needs os_pthread.h to pick up pthread_sigmask().

        * ace/config-openbsd.h:
        * include/makeinclude/platform_openbsd.GNU:
          Threads related cleanup.

Fri Mar  4 12:39:39 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux_icc.GNU:
          Fixed linking problems.

Thu Mar  3 15:49:52 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Ensure that _AMD64_ is defined for
          both MPC and non-MPC projects built for 64-bit Windows.
